# spotify-desk-thing

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: constructor.py  interfaces.py  main.py  stateclass.py
