[project]
name = "spotycontrol"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Samuel Brizzi", email = "samuel.brizzi94@gmail.com" }]
dependencies = ["flet==0.27.5"]

[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "x4b1d.ovh"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "spotycontrol"

# company name to display in about app dialogs
company = "S"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2025 by Samuel Brizzi"

[tool.flet.app]
path = "src"

[tool.uv]
dev-dependencies = ["flet[all]==0.27.5"]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = { extras = ["all"], version = "0.27.5" }
