[project]
name = "spotycontrol"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Samuel Brizzi", email = "samuel.brizzi94@gmail.com" }]
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.8.0",
    "apscheduler==3.11.0",
    "arrow==1.3.0",
    "async-timeout==5.0.1",
    "binaryornot==0.4.4",
    "certifi==2025.1.31",
    "chardet==5.2.0",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "colorama==0.4.6",
    "cookiecutter==2.6.0",
    "exceptiongroup==1.2.2",
    "fastapi==0.115.11",
    "flet==0.27.5",
    "flet-cli==0.27.5",
    "flet-desktop==0.27.5",
    "flet-web==0.27.5",
    "h11==0.14.0",
    "httpcore==1.0.7",
    "httptools==0.6.4",
    "httpx==0.28.1",
    "idna==3.10",
    "jinja2==3.1.6",
    "joblib==1.4.2",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "mdurl==0.1.2",
    "numpy==1.26.4",
    "oauthlib==3.2.2",
    "packaging==24.2",
    "pillow==10.4.0",
    "pydantic==2.10.6",
    "pydantic-core==2.27.2",
    "pygments==2.19.1",
    "pylette==4.0.1",
    "pypng==0.20220715.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "python-slugify==8.0.4",
    "pyyaml==6.0.2",
    "qrcode==7.4.2",
    "redis==5.2.1",
    "repath==0.9.0",
    "requests==2.32.3",
    "rich==13.9.4",
    "scikit-learn==1.6.1",
    "scipy==1.15.2",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sniffio==1.3.1",
    "spotipy==2.25.1",
    "starlette==0.46.0",
    "text-unidecode==1.3",
    "threadpoolctl==3.5.0",
    "toml==0.10.2",
    "typer==0.12.5",
    "types-python-dateutil==2.9.0.20241206",
    "typing-extensions==4.12.2",
    "tzdata==2025.1",
    "tzlocal==5.3.1",
    "urllib3==2.3.0",
    "uvicorn==0.34.0",
    "watchdog==4.0.2",
    "watchfiles==1.0.4",
    "websockets==15.0.1",
]

[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "x4b1d.ovh"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "spotycontrol"

# company name to display in about app dialogs
company = "S"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2025 by Samuel Brizzi"

[tool.flet.app]
path = "src"

[tool.uv]
dev-dependencies = ["flet[all]==0.27.5"]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = { extras = ["all"], version = "0.27.5" }
